# Todo-next-fastapi

./: next.config.js  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt
api/: .env  index.py  model.py  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/comps/: AddTodoTasks.tsx  Fetchtodo.tsx  Nav.tsx  TodoSection.tsx  TodoTasks.tsx  useTodos.tsx
components/ui/: sheet.tsx
